tests/NormalTests/paczka2/big_fuzzy/80882231.err
Error in line 5: J2Ib A288 12,7
Error in line 7: J2Ib S591 17,9
Error in line 15: J2Ib A288 10,6
Error in line 17: kHrW9R S73 64,1
Error in line 16: J2Ib S591 94,0
Error in line 20: J2Ib S73 82,5
Error in line 32: k6rB S591 10,2
Error in line 33: k6rB A827 41,9
Error in line 46: 7if4E A827 22,81
Error in line 45: 7if4E S73 73,3
Error in line 47: 7if4E A827 4,9
Error in line 53: k6rB A288 69,0
Error in line 73: oDBGOul A827 G,G
Error in line 61: oDB6Oul S73 140,8
Error in line 72: k6rB S591 47,5
Error in line 57: 7if4E A827 34,0
Error in line 74: oDB6Oul A827 7,3
Error in line 107: oDB6Oul A288 120,3
Error in line 93: A288 A827 181,9
Error in line 108: k6rB A827 52,3
Error in line 116: A288 S591 27,5
Error in line 112: 7if4E A288 85,1
Error in line 135: J2Ib S591 48,98
Error in line 155: kHrW9R A827 79,8
Error in line 154: A288 A288 64,8
Error in line 165: A288 S591 59,6
Error in line 159: kHrW9R S73 77,4
Error in line 167: oDB6Oul A288 6,6
Error in line 185: k6rB A288 95,0
Error in line 182: kHrW9R S73 99,0
Error in line 188: kHrW9R A288 6,2
Error in line 195: kHrW9R S591 65,4
Error in line 186: J2Ib S73 45,4
Error in line 210: kHrW9R S73 39,0
Error in line 214: oDB6Oul A827 29,0
Error in line 221: 7if4E A827 62,5
Error in line 222: 7if4E S73 18,7
Error in line 206: k6rB A827 222,0
Error in line 246: kHrW9R S591 78,7
